--- a/push/res/values/strings.xml
+++ b/push/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">push</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_init">InitActivity</string>
+    <string name="title_activity_professor">Professor</string>
 
 </resources>
