--- a/push/res/values/strings.xml
+++ b/push/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_Preference">Preference</string>
     <string name="title_activity_student">StudentActivity</string>
     <string name="title_activity_gcminit">GCMInit</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
